# Pacman

./: README.md
pacman/: CMakeLists.txt
pacman/src/: Pacman.cpp
pacman/src/gameLogic/: Game.cpp  Game.h  Level.cpp  Level.h
pacman/src/еntities/: Dot.cpp  Dot.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
